--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "used to create a starfield in 2d",
   "main": "lib/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "tsc": "tsc -p tsconfig.json && tsc -p tsconfig-cjs.json",
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -21,8 +23,10 @@
   },
   "homepage": "https://github.com/agnellazar/npm-pkg-starField#readme",
   "dependencies": {
-    "basic-utilities-ag": "^1.0.0",
-    "starfield-ag": "^2.0.0",
-    "vector-ag": "^1.0.0"
+    "vector-ag": "4.0.0"
+  },
+  "devDependencies": {
+    "webpack": "^5.90.3",
+    "webpack-cli": "^5.1.4"
   }
 }
